# badtracing

./: .gitattributes  Cargo.toml  LICENSE  README.md
src/: camera.rs  lib.rs  main.rs  materials.rs  objects.rs  ray.rs  vec3.rs
