[package]
name = "badtracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3"
rand = {version = "0.8", features = ["small_rng"], default-features = false}
rayon = "1.6"

[profile.release]
codegen-units = 1
